# ProgAvz_UAH

./: .gitignore  README.md
p01/: .gitignore  CMakeLists.txt  Doxyfile
p01-2/include/: matrix.h
p01-2/src/: main.cpp  matrix.cpp
p01/include/: funciones.h
p01/src/: aux.cpp  funciones.cpp  practica1.cpp
p02/: .gitignore  CMakeLists.txt
p02/include/: CMatFloat.hpp  utils.hpp
p02/src/: CMatFloat.cpp  main.cpp  utils.cpp
p03/: .gitignore  CMakeLists.txt
p03-2/: CMakeLists.txt
p03-2/include/: CHora.hpp  utils.hpp
p03-2/src/: CHora.cpp  utils.cpp
p03/include/: CHora.hpp  utils.hpp
p03/src/: CHora.cpp  main.cpp  utils.cpp
p04/: .gitignore  CMakeLists.txt
p04/include/: CHora.hpp  menus.hpp  utils.hpp
p04/src/: CHora.cpp  main.cpp  utils.cpp
p05/: .gitignore  CMakeLists.txt
p05/include/: CFicha.hpp  utils.hpp
p05/src/: CFicha.cpp  CHora.cpp  StrUtils.cpp  main.cpp  utils.cpp
p06/: .gitignore  CMakeLists.txt
p06/include/: CMonomio.hpp  CPolinomio.hpp  CTermino.hpp  types.hpp
p06/src/: CMonomio.cpp  CPolinomio.cpp  main.cpp
p07/: CMakeLists.txt  README.md
p07/include/: CCliente.hpp  CEmpleado.hpp  CFicha.hpp  CHora.hpp  CRegistroDiario.hpp  StrUtils.hpp  utils.hpp
p07/src/: CCliente.cpp  CEmpleado.cpp  CFicha.cpp  CHora.cpp  CRegistroDiario.cpp  StrUtils.cpp  main.cpp  utils.cpp
p07/test/: CCliente_test.cpp  CEmpleado_test.cpp  CMakeLists.txt  CRegistroDiario_test.cpp  cficha_test.cpp
p08/: .dir-locals.el  .gitignore  CMakeLists.txt  README.md  clientes.txt
p08/include/: CCliente.hpp  CContrato.hpp  CEmpresa.hpp  CLista.hpp  CNodoLista.hpp  CSiniestro.hpp  CSiniestroNormal.hpp  CSiniestroUrgente.hpp  types.hpp
p08/src/: CCliente.cpp  CContrato.cpp  CEmpresa.cpp  CLista.cpp  CSiniestro.cpp  CSiniestroNormal.cpp  CSiniestroUrgente.cpp  main.cpp  utils.cpp
p08/test/: CCliente_test.cpp  CContrato_test.cpp  CEmpresa_test.cpp  CLista_test.cpp  CMakeLists.txt  CNodoLista_test.cpp  CSiniestroNormal_test.cpp  CSiniestroUrgente_test.cpp  CSiniestro_test.cpp
